--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
+  "packageManager": "pnpm@8.15.4",
   "devDependencies": {
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.56",
