--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": {
+    "name": "Priyansh Balyan"
+  },
+  "packageManager": "pnpm@8.15.4",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -24,7 +28,6 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
-  "packageManager": "pnpm@8.15.4",
   "devDependencies": {
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.56",
